WIP verify individual case
