# data-serving/data-service/api/openapi.yaml
@@ -771,6 +771,31 @@ paths:
                     $ref: '#/components/responses/422'
                 '500':
                     $ref: '#/components/responses/500'
+    /cases/verify/bundled/{id}:
+        post:
+            summary: Verify case
+            #            tags: [ Case ]
+            #            operationId: verifyCase
+            #            requestBody:
+            #                description: Case with verifier
+            #                required: true
+            #                content:
+            #                    application/json:
+            #                        schema:
+            #                            $ref: '#/components/schemas/Verifier'
+            responses:
+                '200':
+                    $ref: '#/components/responses/200Case'
+                '400':
+                    $ref: '#/components/responses/400'
+                '403':
+                    $ref: '#/components/responses/403'
+                '404':
+                    $ref: '#/components/responses/404'
+                '422':
+                    $ref: '#/components/responses/422'
+                '500':
+                    $ref: '#/components/responses/500'
     /cases/verify/bundled:
         post:
             summary: >
